--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Learn Game Development at ZENVA.com</title>
 
 		<script type="text/javascript" src="js/phaser.min.js"></script>
-        
+        <script type="text/javascript" src="js/MainMenu.js"></script>
 		<script type="text/javascript" src="js/Boot.js"></script>
 		<script type="text/javascript" src="js/Preload.js"></script>
 		<script type="text/javascript" src="js/Game.js"></script>
